# myagent_elf

./: .gitignore  FEILING_DIALOGUE_GUIDE.md  FIRST_ANIMATION_BRIEF.md  FULLBODY_MASTER_BRIEF.md  GITHUB_PROFILE_README_DRAFT.md  IDLE_BLINK_BRIEF.md  LEARNING_JOURNAL.md  NEW_MACHINE_SETUP.md  OC_ART_MASTER.md  OC_ART_PROMPT.md  OC_PROFILE.md  OC_VISUAL_LOCK.md  PET_ANIMATION_PLAN.md  PROJECT_CONTEXT.md  README.md  README_RECRUITING.md  STATE_SET_BRIEF.md  TEACHING_FLOW.md  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/characters/feiling/: ASSET_MANIFEST.md  README.md
desktop/FeilingPetShell/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
electron/: main.js  pet.html  preload.js  search-main.js
playground/: index.html
scripts/: smoke_test_index_service.ps1  start_desktop_stack.ps1  start_electron_shell.ps1  start_frontend_shell.ps1  start_index_service.ps1  start_search_window.ps1  start_wpf_pet.ps1  stop_desktop_stack.ps1  stop_wpf_pet.ps1
src/index_service/: __init__.py  actions.py  api.py  chat.py  config.py  indexing.py  main.py  models.py  search.py  storage.py
tests/: test_indexing.py
