[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-study-index-service"
version = "0.1.0"
description = "Local file indexing service skeleton for agent_study."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

